tooling/base/arc/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gha-runner-scale-set
spec:
  description: "Deny all traffic for the Github Actions Runners, except for HTTP traffic to the internet."
  endpointSelector:
    matchLabels:
      k8s:actions.github.com/scale-set-name: default-gha-runner-scale-set
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
